# sea_battle

./: .gitignore  CMakeLists.txt  README.md  computer.cpp  computer.h  control.cpp  control.h  game.cpp  game.h  gamer.cpp  gamer.h  main.cpp  sea_battle_workspace.code-workspace  ship.cpp  ship.h  view.cpp  view.h  widget.cpp  widget.h
Game/: CMakeLists.txt  game.cpp  game.h
Players/: CMakeLists.txt
Players/Computer/: CMakeLists.txt  computer.cpp  computer.h
Players/Player/: CMakeLists.txt  gamer.cpp  gamer.h
Ship/: CMakeLists.txt  control.cpp  control.h  ship.cpp
View/: CMakeLists.txt
View/View/: CMakeLists.txt  view.cpp
View/Widget/: CMakeLists.txt  widget.cpp  widget.h
